Thu Oct  1 22:58:03 CEST 1998 Jochen Friedrich <jochen@scram.de>

	* esdlib.c: added kludge to esd_sample_cache() to make it
	work under Alpha. Problem was to send a long and receive an int.
	On Alpha this makes extra 4 bytes of crap enough to bring
	client and server out of sync. Probably a better solution is
	to change the prototype for size from long to int.

1998-10-01  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (esd-config): Turn on execute bit only if
	`esd-config' was generated.
	(getopt_long): New check.
	* getopt.h, getopt.c, getopt1.c: New files.
	* Makefile.am (esdplay_LDADD): Add LIBOBJS.
	
Wed Sep 30 21:08:19 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.m4
	* esd-config
	* configure.in: Added support for esd-config (like GTK+). Added
	explict disabling of local sound (for an audio data server). Fixed
	NEW_ALSA detection. Define HAVE_INET_ATON if we have it.

	* audio.c
	* audio_none.c: support for no local sound

	* esdlib.c: provide inet_aton implementation if it's not avaliable

1998-09-29  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, esd.c: updated obsolete info. As noted by Sopwith,
 	termination procedure, clean_exit(), needed tweaking.

	* esd.h, esdlib.c, esdsample.c, proto.c: esd_sample_getid(),
	for fetching a sample id from the name, courtesy of Sopwith.

	* esdcat.c: FILE *source = source; /* hello, mcfly? anybody 
	in there? */ pointed out by Bibek, Sopwith, and others...

1998-09-27  Yo Ric Dude  <ericmit@ix.netcom.com>

	* configure.in: `AC_PROG_RANLIB' is rendered obsolete by `AM_PROG_LIBTOOL'

	* esdlib.c: added the missing esd_close() function.  no need for 
	clients to know they're dealing with a socket.

1998-09-25  Mandrake <mandrake@mandrake.net>

	* autogen.sh: added libtoolize --copy --force to autogen.sh per
	Andreas Jellinghaus <aj@dungeon.inka.de>

1998-09-26  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c: artistic changes 

	* configure.in: add check for nanosleep, Solaris needs -lposix4.