@@ -423,15 +423,13 @@ int esd_record_stream_fallback( esd_format_t format, int rate, char *host, char 
 
 /*******************************************************************/
 /* cache a sample in the server returns sample id, <= 0 is error */
-int esd_sample_cache( int esd, esd_format_t format, int rate, long size, char *name )
+int esd_sample_cache( int esd, esd_format_t format, int rate, int size, char *name )
 {
     int id = 0;
     int proto = ESD_PROTO_SAMPLE_CACHE;
-    int mysize;
 
     /* prepare the name buffer */
     char name_buf[ ESD_NAME_MAX ];
-    mysize = size;
     if ( name )
 	strncpy( name_buf, name, ESD_NAME_MAX );
     else
@@ -447,7 +445,7 @@ int esd_sample_cache( int esd, esd_format_t format, int rate, long size, char *n
 	return -1;
     if ( write( esd, &rate, sizeof(rate) ) != sizeof(rate) )
 	return -1;
-    if ( write( esd, &size, sizeof(mysize) ) != sizeof(mysize) )
+    if ( write( esd, &size, sizeof(size) ) != sizeof(size) )
 	return -1;
     if ( write( esd, name_buf, ESD_NAME_MAX ) != ESD_NAME_MAX )
 	return -1;
